<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".Dashboard">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                    <Space
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button0_name"
                        android:id="@+id/button0"
                        android:layout_gravity="end" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:id="@+id/textView6"
            android:textAlignment="textEnd"
            android:text="-" />

        <Space
            android:layout_width="20dp"
            android:layout_height="10dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/textView1"
                    android:layout_height="wrap_content" />

                <SeekBar
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/seekBar1"
                    android:layout_weight="1"
                    android:max="100"
                    android:nestedScrollingEnabled="false"
                    android:progress="1023" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/button1_name"
                    android:id="@+id/button1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2" />

                <SeekBar
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/seekBar2"
                    android:layout_weight="1"
                    android:max="100"
                    android:progress="1023" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/button2_name"
                    android:id="@+id/button2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_height="wrap_content" />

                <SeekBar
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/seekBar3"
                    android:layout_weight="1"
                    android:max="100"
                    android:nestedScrollingEnabled="false"
                    android:progress="1023" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/button3_name"
                    android:id="@+id/button3" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent">
                <Space
                    android:layout_height="50dp"
                    />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultButton4Desc"
                    android:id="@+id/textView4" />

                <Space
                    android:layout_weight="1" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/button4_name"
                    android:id="@+id/button4" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/button4a_name"
                    android:id="@+id/button4a" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultButton5Desc"
                    android:id="@+id/textView5" />

                <Space
                    android:layout_weight="1" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/button5_name"
                    android:id="@+id/button5" />
            </TableRow>

        </TableLayout>

        <Space
            android:layout_width="20dp"
            android:layout_height="50dp" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_span="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:textAlignment="textEnd"
                android:id="@+id/statusOut"
                android:layout_weight="1" />

        </TableRow>

    </LinearLayout>

</ScrollView>